fix letter spacing

--- a/form/05-styles.css
+++ b/form/05-styles.css
@@ -932,7 +932,7 @@ textarea:focus {
 .form-group .form-help {
     margin: 0;
     line-height: 1.3;
-    initial-letter: .019rem;
+    letter-spacing: .019rem;
     color: var(--color-dark-grey);
     font-size: var(--font-size-small);
     max-height: 0;
